# asciirend

./: Cargo.toml  LICENSE  README.md  build_extras.sh  sample.py
.cargo/: config.toml
.github/workflows/: build.yml
examples/: sample.rs
python/: .gitignore  README.md  arpy.py  asciirend.wasm  sample.py  setup.py
python/asciirend/: __init__.py
src/: color.rs  dithering.rs  lib.rs  material.rs
src/extra/: bindings.rs  camera_controller.rs  global_state.rs  mod.rs
web_sample/: README.md  draw.js  index.html  style.css
