[package]
name = "asciirend"
version = "0.1.0"
edition = "2021"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
license = "MIT"
repository = "https://github.com/h33p/asciirend"
description = "no_std compatible ascii rendering core"

[[bin]]
name = "example"
test = false
bench = false
required-features = ["test-bin"]

[dependencies]
nalgebra = { version = "0.32", default-features = false, features = ["macros", "libm"] }
libm = "0.2"
colorsys = { version = "0.6", default-features = false }

crossterm = { version = "0.27", optional = true }
anyhow = { version = "1", optional = true }
signal-hook = { version = "0.3", optional = true }

[features]
default = ["std"]
std = ["crossterm"]
test-bin = ["anyhow", "std", "signal-hook"]
